istio-day2/1-deploy-istio/labs/07/web-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api 
spec:
  selector:
    app: web-api
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
