istio-day2/1-deploy-istio/labs/07/default-sidecar-allows-all-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: istioinaction
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
    - "istio-ingress/*"
