istio-day2/1-deploy-istio/labs/07/vs-delegate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: delegate-vs
  namespace: istio-ingress
spec:
  hosts:
  - "istioinaction.io"
  gateways:
  - web-api-gateway
  http:
  - match:
    - uri:
        exact: /hello
    delegate:
      name: helloworld
      namespace: default
  - delegate:
      name: web-api-gw-vs
      namespace: istioinaction
